add 排序函数 add 插值函数 add 矩阵运算函数 add 一元回归函数&多元回归函数

--- a/demos/demos.vcproj
+++ b/demos/demos.vcproj
@@ -166,7 +166,23 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Interpolation.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\matrixComputation.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\segyRW.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\SLRandMLR.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Sort.cpp"
 				>
 			</File>
 			<File
@@ -180,7 +196,23 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\Interpolation.h"
+				>
+			</File>
+			<File
+				RelativePath=".\matrixComputation.h"
+				>
+			</File>
+			<File
 				RelativePath=".\segyRW.h"
+				>
+			</File>
+			<File
+				RelativePath=".\SLRandMLR.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Sort.h"
 				>
 			</File>
 			<File
